--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   intl: ^0.17.0
   table_calendar: ^3.0.8
+  qr_flutter: ^4.0.0
+  numberpicker: ^2.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
