--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,16 @@ dependencies:
 
   http: ^0.13.5
   fluttertoast: ^8.1.1
+  flutter_lints: ^1.0.0
+  intl: ^0.17.0
+  table_calendar: ^3.0.8
+  qr_flutter: ^4.0.0
+  numberpicker: ^2.1.1
+  gallery_saver: ^2.3.2
+  share_plus: ^6.3.0
+  shared_preferences: ^2.0.15
+  image_picker: ^0.8.6
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,11 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
-  intl: ^0.17.0
-  table_calendar: ^3.0.8
-  qr_flutter: ^4.0.0
-  numberpicker: ^2.1.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
